Update to use views directly instead of JPA entity