@@ -1,123 +1,171 @@
 package com.remo.transaction_scanner.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.BDDMockito.given;
 
 import com.remo.transaction_scanner.model.TransactionResponse;
-import com.remo.transaction_scanner.repository.SuspiciousFrequentTransactionsRepository;
-import com.remo.transaction_scanner.repository.SuspiciousHighVolumeTransactionsRepository;
-import com.remo.transaction_scanner.repository.SuspiciousRapidTransactionsRepository;
-import com.remo.transaction_scanner.repository.model.SuspiciousFrequentTransactions;
-import com.remo.transaction_scanner.repository.model.SuspiciousHighVolumeTransactions;
-import com.remo.transaction_scanner.repository.model.SuspiciousRapidTransactions;
 import java.math.BigDecimal;
 import java.sql.Timestamp;
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.RowMapper;
 
 @ExtendWith(MockitoExtension.class)
 class SuspiciousTransactionFinderTest {
 
-  @Mock private SuspiciousFrequentTransactionsRepository frequentRepo;
-
-  @Mock private SuspiciousHighVolumeTransactionsRepository highVolumeRepo;
-
-  @Mock private SuspiciousRapidTransactionsRepository rapidRepo;
+  @Mock private JdbcTemplate jdbcTemplate;
 
   @InjectMocks private SuspiciousTransactionFinder finder;
 
-  private SuspiciousFrequentTransactions sft;
-  private SuspiciousHighVolumeTransactions shvt;
-  private SuspiciousRapidTransactions srt;
+  private final String USER_ID = "user123";
 
-  @BeforeEach
-  void setUp() {
-    sft = new SuspiciousFrequentTransactions();
-    sft.setUserId("user1");
-    sft.setAmount(new BigDecimal("50.00"));
-    sft.setTimestamp(Timestamp.valueOf(LocalDateTime.of(2025, 4, 24, 10, 0)));
-    sft.setType("TYPE1");
-
-    shvt = new SuspiciousHighVolumeTransactions();
-    shvt.setUserId("user2");
-    shvt.setAmount(new BigDecimal("10000.00"));
-    shvt.setTimestamp(Timestamp.valueOf(LocalDateTime.of(2025, 4, 24, 11, 0)));
-    shvt.setType("TYPE2");
-
-    srt = new SuspiciousRapidTransactions();
-    srt.setUserId("user3");
-    srt.setAmount(new BigDecimal("20.00"));
-    srt.setTimestamp(Timestamp.valueOf(LocalDateTime.of(2025, 4, 24, 10, 5)));
-    srt.setType("TYPE3");
+  private TransactionResponse buildResponse(
+      long id, String userId, BigDecimal amount, Timestamp ts) {
+    return TransactionResponse.builder().id(id).userId(userId).amount(amount).timestamp(ts).build();
   }
 
   @Test
-  void whenNoSuspicious_thenReturnEmptyList() {
-    when(frequentRepo.findAll()).thenReturn(List.of());
-    when(highVolumeRepo.findAll()).thenReturn(List.of());
-    when(rapidRepo.findAll()).thenReturn(List.of());
+  @DisplayName("Should return empty list when no suspicious transactions found")
+  void noSuspiciousTransactions() {
+    given(jdbcTemplate.query(any(String.class), any(RowMapper.class), eq(USER_ID)))
+        .willReturn(Collections.emptyList());
 
-    List<TransactionResponse> result = finder.getAllSuspiciousTransactionForUserId("any");
-    assertThat(result).isEmpty();
+    List<TransactionResponse> results = finder.getAllSuspiciousTransactionForUserId(USER_ID);
+
+    assertThat(results).isEmpty();
   }
 
   @Test
-  void whenOnlyFrequent_thenMapCorrectly() {
-    when(frequentRepo.findAll()).thenReturn(List.of(sft));
-    when(highVolumeRepo.findAll()).thenReturn(List.of());
-    when(rapidRepo.findAll()).thenReturn(List.of());
+  @DisplayName("Should tag only frequent transactions correctly")
+  void onlyFrequentTransactions() {
+    TransactionResponse tr1 =
+        buildResponse(
+            1L, USER_ID, new BigDecimal("10.00"), Timestamp.valueOf("2025-04-25 10:00:00"));
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp, cnt FROM transaction_scanner.suspicious_frequent_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(List.of(tr1));
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp FROM transaction_scanner.suspicious_high_volume_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(Collections.emptyList());
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp, five_min_count FROM transaction_scanner.suspicious_rapid_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(Collections.emptyList());
 
-    List<TransactionResponse> result = finder.getAllSuspiciousTransactionForUserId("user1");
-    assertThat(result).hasSize(1);
-    TransactionResponse tr = result.get(0);
-    assertThat(tr.getUserId()).isEqualTo("user1");
-    assertThat(tr.getAmount()).isEqualByComparingTo("50.00");
-    assertThat(tr.getTimestamp())
-        .isEqualTo(Timestamp.valueOf(LocalDateTime.of(2025, 4, 24, 10, 0)));
-    assertThat(tr.getType()).isEqualTo("TYPE1");
-    assertThat(tr.getSuspicious()).isTrue();
-    assertThat(tr.getSuspiciousReason()).isEqualTo("Frequent transaction");
+    List<TransactionResponse> results = finder.getAllSuspiciousTransactionForUserId(USER_ID);
+
+    assertThat(results).hasSize(1);
+    TransactionResponse result = results.get(0);
+    assertThat(result.getId()).isEqualTo(1L);
+    assertThat(result.getSuspiciousReason()).containsExactly("Frequent transaction");
   }
 
   @Test
-  void whenOnlyHighVolume_thenMapCorrectly() {
-    when(frequentRepo.findAll()).thenReturn(List.of());
-    when(highVolumeRepo.findAll()).thenReturn(List.of(shvt));
-    when(rapidRepo.findAll()).thenReturn(List.of());
+  @DisplayName("Should merge reasons for overlapping frequent and high volume transactions")
+  void frequentAndHighVolumeMerge() {
+    TransactionResponse shared =
+        buildResponse(
+            5L, USER_ID, new BigDecimal("100.00"), Timestamp.valueOf("2025-04-25 11:00:00"));
+    TransactionResponse hv =
+        buildResponse(
+            5L, USER_ID, new BigDecimal("100.00"), Timestamp.valueOf("2025-04-25 11:00:00"));
 
-    List<TransactionResponse> result = finder.getAllSuspiciousTransactionForUserId("user2");
-    assertThat(result).hasSize(1);
-    TransactionResponse tr = result.get(0);
-    assertThat(tr.getUserId()).isEqualTo("user2");
-    assertThat(tr.getSuspiciousReason()).isEqualTo("High volume transaction");
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp, cnt FROM transaction_scanner.suspicious_frequent_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(List.of(shared));
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp FROM transaction_scanner.suspicious_high_volume_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(List.of(hv));
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp, five_min_count FROM transaction_scanner.suspicious_rapid_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(Collections.emptyList());
+
+    List<TransactionResponse> results = finder.getAllSuspiciousTransactionForUserId(USER_ID);
+
+    assertThat(results).hasSize(1);
+    TransactionResponse tx = results.get(0);
+    assertThat(tx.getId()).isEqualTo(5L);
+    assertThat(tx.getSuspiciousReason())
+        .containsExactlyInAnyOrder("Frequent transaction", "High volume transaction");
   }
 
   @Test
-  void whenOnlyRapid_thenMapCorrectly() {
-    when(frequentRepo.findAll()).thenReturn(List.of());
-    when(highVolumeRepo.findAll()).thenReturn(List.of());
-    when(rapidRepo.findAll()).thenReturn(List.of(srt));
+  @DisplayName("Should handle rapid transactions and merge multiple sources")
+  void allSourcesMerged() {
+    TransactionResponse f =
+        buildResponse(
+            1L, USER_ID, new BigDecimal("10.00"), Timestamp.valueOf("2025-04-25 09:00:00"));
+    TransactionResponse h =
+        buildResponse(
+            2L, USER_ID, new BigDecimal("20.00"), Timestamp.valueOf("2025-04-25 09:05:00"));
+    TransactionResponse r =
+        buildResponse(
+            1L, USER_ID, new BigDecimal("10.00"), Timestamp.valueOf("2025-04-25 09:00:00"));
 
-    List<TransactionResponse> result = finder.getAllSuspiciousTransactionForUserId("user3");
-    assertThat(result).hasSize(1);
-    TransactionResponse tr = result.get(0);
-    assertThat(tr.getUserId()).isEqualTo("user3");
-    assertThat(tr.getSuspiciousReason()).isEqualTo("Rapid transaction");
-  }
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp, cnt FROM transaction_scanner.suspicious_frequent_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(List.of(f));
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp FROM transaction_scanner.suspicious_high_volume_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(List.of(h));
+    given(
+            jdbcTemplate.query(
+                eq(
+                    "SELECT id, user_id, amount, timestamp, five_min_count FROM transaction_scanner.suspicious_rapid_transactions WHERE user_id = ?"),
+                any(RowMapper.class),
+                eq(USER_ID)))
+        .willReturn(List.of(r));
 
-  @Test
-  void whenAllTypes_thenCombineAll() {
-    when(frequentRepo.findAll()).thenReturn(List.of(sft));
-    when(highVolumeRepo.findAll()).thenReturn(List.of(shvt));
-    when(rapidRepo.findAll()).thenReturn(List.of(srt));
+    List<TransactionResponse> results = finder.getAllSuspiciousTransactionForUserId(USER_ID);
 
-    List<TransactionResponse> result = finder.getAllSuspiciousTransactionForUserId("all");
-    assertThat(result).hasSize(3);
+    assertThat(results).hasSize(2);
+    TransactionResponse tx1 =
+        results.stream().filter(t -> t.getId() == 1L).findFirst().orElseThrow();
+    TransactionResponse tx2 =
+        results.stream().filter(t -> t.getId() == 2L).findFirst().orElseThrow();
+
+    assertThat(tx1.getSuspiciousReason())
+        .containsExactlyInAnyOrder("Frequent transaction", "Rapid transaction");
+    assertThat(tx2.getSuspiciousReason()).containsExactly("High volume transaction");
   }
 }
